--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,246 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Briem+Hand:wght@100&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-image: url("./image/cbe83404192648c8b407570fa9f4f869.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    cursor: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home .home-ctr {
+    margin-top: 15px;
+    max-width: 90%;
 }
 
-.App-link {
-  color: #61dafb;
+.home .home-ctr .head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home .home-ctr .head h1 {
+    font-family: cursive;
+    font-size: 4.5rem;
+    color: rgb(216, 216, 11);
+    font-weight: 900;
+}
+
+.home .home-ctr .main {
+    max-width: 100%;
+    margin-top: 18px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home .home-ctr .main h1 {
+    font-size: 3.5rem;
+    margin: 10px;
+    color: white;
+    font-weight: 900;
+}
+
+.home .home-ctr .main p {
+    font-size: 2rem;
+    color: white;
+}
+
+.home .home-ctr .main .pro {
+    text-align: center;
+}
+
+.home .home-ctr .main .main-ctr {
+    margin-top: 18px;
+}
+
+.home .home-ctr .main .pro h1 {
+    color: rgb(216, 216, 11);
+    font-weight: 900;
+}
+
+.home .home-ctr .home-abt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0px;
+}
+
+.home .home-ctr .home-abt .home-abt-lite {
+    margin: 15px 0px;
+    max-width: 35%;
+}
+
+.home .home-ctr .home-abt .home-abt-lite p {
+    text-align: center;
+    color: grey;
+}
+
+.home .home-ctr .social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home .home-ctr .social .social-ctr {
+    width: 50%;
+}
+
+.home .home-ctr .social .social-ctr .available {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home .home-ctr .social .social-ctr .available p {
+    color: whitesmoke;
+}
+
+.home .home-ctr .social .social-ctr .available .fadee {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: rgb(216, 216, 11);
+    margin: 10px;
+}
+
+.home .home-ctr .social .social-ctr .or-line {
+    height: 40px;
+    border: 1px solid gray;
+    margin: 10px;
+}
+
+.home .home-ctr .grey-line {
+    border: 1px solid grey;
+    margin: 15px 0px;
+}
+
+.home .home-ctr .social .social-ctr .social-main {
+    display: flex;
+    justify-content: space-around;
+}
+
+.home .home-ctr .social .social-ctr .internet {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.home .home-ctr .social .social-ctr .internet p {
+    margin: 10px 15px;
+    font-size: 2rem;
+    color: grey;
+}
+
+.home .home-ctr .social .social-ctr .internet p:hover {
+    color: rgb(216, 216, 11);
+    transform: scale(1.3);
+    transition: all ease .2s;
+}
+
+/* .home .home-ctr .social .social-ctr .social-main .internet */
+
+
+/* serial number */
+
+.serial .serial-no {
+    overflow: hidden;
+    /* width: fit-content; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.serial h1 {
+    font-size: 6rem;
+    color: rgb(216, 216, 11);
+    /* font-family: cursive; */
+    z-index: -1;
+    position: relative;
+    opacity: .8;
+}
+
+.serial p {
+    font-size: 2.5rem;
+    color: whitesmoke;
+    margin-top: -48px;
+    background-color: #121919;
+    /* width: fit-content; */
+    z-index: 2;
+    opacity: 1.2;
+}
+
+/* service */
+
+.main-ser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.services {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    width: 85%;
+    
+}
+
+/* .services .service-skills{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: auto auto;
+    align-content: center;
+    justify-content: center;
+} */
+.services .service-skills .serv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.services .service-skills .bx {
+    border: .1px solid grey;
+    border-radius: 8px;
+    width: 35%;
+    margin: 10px;
+    padding: 10px;
+}
+
+.services .service-skills .bx-img {
+    width: 35%;
+}
+
+.services .service-skills .bx h2 {
+    color: whitesmoke;
+    margin: 10px;
+}
+
+.services .service-skills .bx p {
+    color: grey;
+    margin: 10px;
+    line-height: 1.2;
+}
+
+.services .service-skills .bx-img img {
+    width: 100%;
+    aspect-ratio: 2/2;
 }
