--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,13 @@
     box-sizing: border-box;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
+a{
+    text-decoration: none;
+}
 
 body {
-    background-image: url("./image/cbe83404192648c8b407570fa9f4f869.webp");
+    /* background-image: url("./image/cbe83404192648c8b407570fa9f4f869.webp"); */
+    background-color: #151f1e;
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: cover;
@@ -160,7 +164,7 @@ body {
 
 .serial .serial-no {
     overflow: hidden;
-    /* width: fit-content; */
+    width: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -170,7 +174,6 @@ body {
 .serial h1 {
     font-size: 6rem;
     color: rgb(216, 216, 11);
-    /* font-family: cursive; */
     z-index: -1;
     position: relative;
     opacity: .8;
@@ -180,8 +183,9 @@ body {
     font-size: 2.5rem;
     color: whitesmoke;
     margin-top: -48px;
-    background-color: #121919;
+    background-color: #172022;
     /* width: fit-content; */
+    padding: 15px;
     z-index: 2;
     opacity: 1.2;
 }
@@ -195,52 +199,338 @@ body {
     margin-top: 15px;
 }
 
-.services {
+.main-ser .servicess {
     display: flex;
-    justify-content: center;
     margin-top: 15px;
-    width: 85%;
-    
+    justify-content: space-evenly;
+    /* align-items: center; */
 }
 
-/* .services .service-skills{
-    display: grid;
-    gap: 10px;
-    grid-template-columns: auto auto;
-    align-content: center;
+.main-ser .servicess .service-skills {
+    width: 50%;
+    display: flex;
     justify-content: center;
-} */
-.services .service-skills .serv {
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.main-ser .servicess .service-skills .bx {
+    width: 45%;
+    margin: 17px;
+    padding: 20px;
+    border: .1em solid rgb(78, 77, 77);
+    border-radius: 8px;
+    transition: all ease .3s;
+}
+
+.main-ser .servicess .service-skills .bx:hover img {
+    opacity: 0.8;
+    margin-left: 10px;
+    transition: all ease .3s;
+}
+
+.main-ser .servicess .service-skills .bx:hover {
+    background-color: #131919;
+}
+
+.main-ser .servicess .service-skills .bx .bx-img {
+    width: 30%;
+}
+
+.main-ser .servicess .service-skills .bx .bx-img img {
+    width: 100%;
+    transition: all ease .3s;
+}
+
+.main-ser .servicess .service-skills .bx h2 {
+    color: white;
+    margin: 10px;
+}
+
+.main-ser .servicess .service-skills .bx p {
+    color: grey;
+    margin: 10px;
+}
+
+/* scrolling text */
+
+.container {
+    overflow: hidden;
+    margin: 20px 0px;
+}
+
+.container .scroll-text {
+    white-space: nowrap;
+    margin: 20px 0px;
+}
+
+.scroll-text div {
+    display: flex;
+    gap: 2em;
+}
+
+.scroll-text p {
+    font-weight: bold;
+    font-size: 5em;
+    margin: 0;
+    color: rgba(217, 217, 217, 0.2);
+}
+
+.scroll-text .rightToLeft {
+    animation: RightToLeft 20s linear infinite;
+}
+
+@keyframes RightToLeft {
+    from {
+        transform: translateX(0%);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+.scroll-text .leftToRight {
+    animation: leftToRight 20s linear infinite;
+}
+
+@keyframes leftToRight {
+    from {
+        transform: translateX(-100%);
+    }
+
+    to {
+        transform: translateX(0%);
+    }
+}
+
+/* about */
+
+.about {
+    display: flex;
+    justify-content: center;
+    margin-top: 18px;
+}
+
+.about-crt {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 18px 0px;
+}
+
+.about-crt .self-intro {
+    width: 60%;
+    margin: 15px 0px;
+}
+
+.about-crt .self-intro h1 {
+    /* color: rgb(155, 154, 154); */
+    color: white;
+    line-height: 1.4;
+    margin: 20px 0px;
+    font-size: 2em;
+}
+
+.about-crt .self-intro .self-detail p {
+    /* color: rgb(155, 154, 154); */
+    color: grey;
+    line-height: 1.5;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.about-crt .self-intro .work {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    /* gap: 15px; */
+    margin-top: 20px;
+}
+
+.about-crt .self-intro .work .grid-bx {
+    border-bottom: .1px solid grey;
+    padding: 20px;
+}
+
+.about-crt .self-intro .work .grid-bx p {
+    color: grey;
+}
+
+/* contact */
+
+.contact {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    margin: 18px 0px;
 }
 
-.services .service-skills .bx {
-    border: .1px solid grey;
-    border-radius: 8px;
-    width: 35%;
-    margin: 10px;
-    padding: 10px;
+.contact .contact-ctr {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 18px 0px;
 }
 
-.services .service-skills .bx-img {
-    width: 35%;
+.contact .contact-detail {
+    width: 60%;
 }
 
-.services .service-skills .bx h2 {
-    color: whitesmoke;
-    margin: 10px;
+.contact .contact-detail h1 {
+    color: white;
+    margin: 20px 0px;
 }
 
-.services .service-skills .bx p {
+.contact .contact-detail .first-p {
     color: grey;
-    margin: 10px;
-    line-height: 1.2;
+    line-height: 1.5;
+    max-width: 50%;
+    font-size: 1.5rem;
 }
 
-.services .service-skills .bx-img img {
-    width: 100%;
-    aspect-ratio: 2/2;
+.social-main-1 {
+    display: flex;
+    justify-content: space-between;
+    max-width: 70%;
+    margin: 20px 0px;
+}
+
+.available {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.available p {
+    color: whitesmoke;
+}
+
+.available .fadee {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: rgb(216, 216, 11);
+    margin: 10px;
+}
+
+.or-line {
+    height: 40px;
+    border: 1px solid gray;
+    margin: 10px;
+}
+
+.internet {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.internet p {
+    margin: 10px 15px;
+    font-size: 2rem;
+    color: grey;
+}
+
+.internet p:hover {
+    color: rgb(216, 216, 11);
+    transform: scale(1.3);
+    transition: all ease .2s;
+}
+
+.cont-mail {
+    background-color: rgb(216, 216, 11);
+    color: #172022;
+    padding: 20px;
+    width: 60%;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.cont-mail:hover p{
+    margin-right: 0;
+    transition: all ease .2s;
+}
+.cont-mail p {
+    text-align: end;
+    font-size: 2.5rem;
+    margin-right: 10px;
+    transition: all ease .2s;
+}
+
+/* skills */
+
+.skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+}
+.skills .skill-crt{
+    display: flex;
+    margin: 20px 0px;
+    justify-content: space-between;
+    width: 70%;
+}
+
+.skills .skill-crt .percent{
+    width: 65%;
+}
+.skills .skill-crt .percent .skil-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.skills .skill-crt .percent .skil-bar .skill-per{
+    display: flex;
+    align-items: center;
+    width: 75%;
+}
+.skills .skill-crt .percent .skil-bar .skill-per p{
+    background-color: rgb(216, 216, 11);
+    width: calc( 100% - 40%);
+    padding: 15px;
+    color: grey;
+    font-size: 1.5rem;
+    border-radius: 8px;
+}
+.skil-bar .skill-per .empty-line{
+    border: 2px solid grey; 
+    /* width: 90%; */
+    height: 2px;
+}
+.skil-bar h2{
+    width: fit-content;
+    color: white;
+    font-size: 2.5rem;
+    margin: 15px;
+
+}
+
+/* shotcut Button */
+
+.shot-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
+.shot-btn .shot{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+    background-color: #131919;
+    border-radius: 8px;
+    position: fixed;
+    top: 85%;
+}
+.shot-btn .shot p{
+    margin: 10px 20px;
+    color: rgb(216, 216, 11);
+    font-size: 1.8rem;
+    transition: all ease .3s;
+}
+.shot-btn .shot .shot-in:hover p{
+    transform: translateY(-20px);
+    transition: all ease .3s;
 }
