--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;
     font-family: "Plus Jakarta Sans", sans-serif;
 }
-a{
+
+a {
     text-decoration: none;
 }
 
@@ -87,7 +88,7 @@ body {
 
 .home .home-ctr .home-abt .home-abt-lite {
     margin: 15px 0px;
-    max-width: 35%;
+    width: 35%;
 }
 
 .home .home-ctr .home-abt .home-abt-lite p {
@@ -164,7 +165,7 @@ body {
 
 .serial .serial-no {
     overflow: hidden;
-    width: fit-content;
+    /* width: fit-content; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -211,10 +212,137 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
+    margin: 20px 0px;
 }
 
-.main-ser .servicess .service-skills .bx {
+.service-skills .projects1 {
+    width: 100%;
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.service-skills .projects1:hover .pro-detail {
+    visibility: visible;
+    opacity: 1;
+    transition: all ease .3s;
+    transform: translateY(0);
+}
+
+.service-skills .projects1 .pro-top {
+    width: 100%;
+}
+
+.service-skills .projects1 .pro-top img {
+    width: 100%;
+}
+
+.service-skills .projects1 .pro-top img:hover {
+    filter: brightness(.7);
+    opacity: .8;
+}
+
+.service-skills .projects1 .pro-detail {
+    background-color: rgb(216, 216, 11);
+    padding: 15px;
+    padding-bottom: 25px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease .3s;
+    cursor: pointer;
+    transform: translateY(200px);
+}
+
+.service-skills .projects1 .pro-detail h1 {
+    color: #172022;
+    padding: 10px;
+    padding-bottom: 0px;
+    /* font-size: 1.5rem; */
+    border-radius: 8px;
+}
+
+.service-skills .projects1 .pro-detail span {
+    color: #172022;
+    padding-left: 14px;
+}
+
+.service-skills .projects {
+    margin-top: 10px;
+}
+
+.service-skills .projects .pro-lite {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.service-skills .projects .pro-lite .proj {
+    width: 48%;
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.service-skills .projects .pro-lite .proj:hover .pro-left-text {
+    visibility: visible;
+    opacity: 1;
+    transition: all ease .3s;
+    transform: translateY(0);
+}
+
+.service-skills .projects .pro-lite .proj .pro-img {
+    width: 100%;
+}
+
+.service-skills .projects .pro-lite .proj .pro-img img {
+    width: 100%;
+}
+
+.service-skills .projects .pro-lite .proj .pro-img img:hover {
+    filter: brightness(.7);
+    opacity: .8;
+}
+
+.service-skills .projects .pro-lite .proj .pro-left-text {
+    background-color: rgb(216, 216, 11);
+    padding: 15px;
+    padding-bottom: 25px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease .3s;
+    cursor: pointer;
+    transform: translateY(200px);
+}
+
+.service-skills .projects .pro-lite .proj .pro-left-text h1 {
+    color: #172022;
+    padding: 10px;
+    padding-bottom: 0px;
+    border-radius: 8px;
+}
+
+.service-skills .projects .pro-lite .proj .pro-left-text span {
+    color: #172022;
+    padding-left: 14px;
+}
+
+
+/* .main-ser .servicess .service-skills .bx {
     width: 45%;
     margin: 17px;
     padding: 20px;
@@ -250,7 +378,7 @@ body {
 .main-ser .servicess .service-skills .bx p {
     color: grey;
     margin: 10px;
-}
+} */
 
 /* scrolling text */
 
@@ -384,14 +512,14 @@ body {
 .contact .contact-detail .first-p {
     color: grey;
     line-height: 1.5;
-    max-width: 50%;
+    width: 50%;
     font-size: 1.5rem;
 }
 
 .social-main-1 {
     display: flex;
     justify-content: space-between;
-    max-width: 70%;
+    width: 70%;
     margin: 20px 0px;
 }
 
@@ -446,10 +574,11 @@ body {
     cursor: pointer;
 }
 
-.cont-mail:hover p{
+.cont-mail:hover p {
     margin-right: 0;
     transition: all ease .2s;
 }
+
 .cont-mail p {
     text-align: end;
     font-size: 2.5rem;
@@ -459,46 +588,52 @@ body {
 
 /* skills */
 
-.skills{
+.skills {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px 0px;
 }
-.skills .skill-crt{
+
+.skills .skill-crt {
     display: flex;
     margin: 20px 0px;
     justify-content: space-between;
     width: 70%;
 }
 
-.skills .skill-crt .percent{
+.skills .skill-crt .percent {
     width: 65%;
 }
-.skills .skill-crt .percent .skil-bar{
+
+.skills .skill-crt .percent .skil-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.skills .skill-crt .percent .skil-bar .skill-per{
+
+.skills .skill-crt .percent .skil-bar .skill-per {
     display: flex;
     align-items: center;
     width: 75%;
 }
-.skills .skill-crt .percent .skil-bar .skill-per p{
+
+.skills .skill-crt .percent .skil-bar .skill-per p {
     background-color: rgb(216, 216, 11);
-    width: calc( 100% - 40%);
+    width: calc(100% - 40%);
     padding: 15px;
     color: grey;
     font-size: 1.5rem;
     border-radius: 8px;
 }
-.skil-bar .skill-per .empty-line{
-    border: 2px solid grey; 
+
+.skil-bar .skill-per .empty-line {
+    border: 2px solid grey;
     /* width: 90%; */
     height: 2px;
 }
-.skil-bar h2{
+
+.skil-bar h2 {
     width: fit-content;
     color: white;
     font-size: 2.5rem;
@@ -508,29 +643,202 @@ body {
 
 /* shotcut Button */
 
-.shot-btn{
+.shot-btn {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100px;
 }
-.shot-btn .shot{
+
+.shot-btn .shot {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 10px;
     background-color: #131919;
+    z-index: 10000;
     border-radius: 8px;
     position: fixed;
     top: 85%;
 }
-.shot-btn .shot p{
+
+.shot-btn .shot p {
     margin: 10px 20px;
     color: rgb(216, 216, 11);
     font-size: 1.8rem;
     transition: all ease .3s;
 }
-.shot-btn .shot .shot-in:hover p{
+
+.shot-btn .shot .shot-in:hover p {
     transform: translateY(-20px);
     transition: all ease .3s;
+}
+
+
+/* responsive design */
+
+@media screen and (max-width:600px) {
+    body {
+        cursor: none;
+    }
+
+    /* home */
+    .home {
+        width: 100% !important;
+    }
+
+    .home .home-ctr {
+        width: 90% !important;
+    }
+
+    .home .home-ctr .head {
+        width: 100% !important;
+    }
+
+    .home .home-ctr .main .pro h1 {
+        font-size: 3rem;
+    }
+
+    .home .home-ctr .home-abt {
+        width: 100%;
+    }
+
+    .home .home-ctr .home-abt .home-abt-lite {
+        width: 100%;
+    }
+    .home .home-ctr .social .social-ctr {
+        width: 80%;
+    }
+    .home .home-ctr .social .social-ctr .social-main {
+        flex-wrap: wrap;
+        text-align: center;
+    }
+
+    .home .home-ctr .social .social-ctr .or-line {
+        display: none;
+    }
+
+    .home .home-ctr .social .social-ctr .internet {
+        flex-wrap: wrap;
+        width: auto;
+        height: auto;
+    }
+
+    .home .home-ctr .social .social-ctr .internet p {
+        margin: 10px;
+        font-size: 2rem;
+    }
+
+    /* serial no. */
+    .serial .serial-no {
+        width: 90%;
+    }
+
+    /* projects */
+
+    .main-ser .servicess {
+        flex-wrap: wrap;
+    }
+
+    .main-ser .servicess .service-skills {
+        width: 90% !important;
+    }
+    .service-skills .projects1 .pro-detail {
+        padding: 15px;
+    }
+    .service-skills .projects1 .pro-detail h1 {
+        padding: 10px;
+    }
+    .service-skills .projects .pro-lite {
+        flex-wrap: wrap;
+    }
+    .service-skills .projects .pro-lite .proj {
+        width: 100% !important;
+    }
+
+    /* skills */
+
+    .skills .skill-crt {
+        width: 90%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .skills .skill-crt .percent {
+        width: 90%;
+    }
+    .skills .skill-crt .percent .skil-bar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .skills .skill-crt .percent .skil-bar .skill-per p {
+        font-size: 1rem;
+    }
+
+    /* about*/
+    .about-crt {
+        justify-content: center;
+        width: 90%;
+        flex-wrap: wrap;
+    }
+    .about-crt .self-intro {
+        width: 90%;
+        flex-shrink: inherit;
+    }
+    .about-crt .self-intro h1 {
+        
+        font-size: 1.5rem;
+    }
+    .about-crt .self-intro .self-detail p {
+        font-size: 1rem;
+    }
+    .about-crt .self-intro .work {
+     gap: 2px;
+    }
+    .about-crt .self-intro .work .grid-bx {
+        padding:7px 0;
+    }
+
+    /* contact */
+    .contact .contact-ctr {
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+    }
+    .contact .contact-detail {
+        width: 100%;
+    }
+    .contact .contact-detail h1 {
+        font-size: 1.5rem;
+    }
+    .contact .contact-detail .first-p {
+       width: 100%;
+       font-size: 1rem;
+    }
+    .social-main-1 {
+        flex-wrap: wrap;
+        justify-content: start;
+        width: 100%;
+    }
+    .or-line {
+        display: none;
+    }
+    .cont-mail {
+        width: 100%;
+    }
+
+    /* shortcut button */
+    
+    .shot-btn {
+        width: 100% !important;
+    }
+    .shot-btn .shot{
+        width: 90% !important;
+        justify-content: space-evenly;
+    }
+    .shot-btn .shot p {
+        margin: 5px 10px;
+        font-size: 1.2rem;
+    }
 }
